--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,7 +1,7 @@
-FROM python:3.12
+FROM python:3.13
 
 # environment
-ENV DATABASE_URL "sqlite:///./app.db"
+ENV DATABASE_URL="sqlite:///./app.db"
 
 # install dependencies
 RUN apt-get update \
