--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 # app
 pygemstones>=0.0.14
 black>=25.1.0
-pydantic
+pydantic>=2.0.0
+sqlalchemy>=2.0.0
 fastapi
 uvicorn
 requests
-sqlalchemy
-mysql-connector-python
 throttled
 apscheduler
 
